{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 66,
  "lineage": "45ff3dea-8215-bbb2-67e1-5d1d5af9ea28",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b45fb0a670b57454",
            "arn": "arn:aws:ec2:us-east-1:517346398148:elastic-ip/eipalloc-0b45fb0a670b57454",
            "association_id": "eipassoc-06134c574d551d9f0",
            "domain": "vpc",
            "id": "eipalloc-0b45fb0a670b57454",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e73e6dccbd33411f",
            "private_dns": "ip-10-40-131-189.ec2.internal",
            "private_ip": "10.40.131.189",
            "public_dns": "ec2-204-236-228-25.compute-1.amazonaws.com",
            "public_ip": "204.236.228.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-nat-eip",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-nat-eip",
              "Project": "mlops-platform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:internet-gateway/igw-00d30e079067b131b",
            "id": "igw-00d30e079067b131b",
            "owner_id": "517346398148",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-igw",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-igw",
              "Project": "mlops-platform"
            },
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "dependencies": [
            "module.eks.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b45fb0a670b57454",
            "association_id": "eipassoc-06134c574d551d9f0",
            "connectivity_type": "public",
            "id": "nat-0dbba137270a46259",
            "network_interface_id": "eni-0e73e6dccbd33411f",
            "private_ip": "10.40.131.189",
            "public_ip": "204.236.228.25",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03f10409a7053120e",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-nat",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-nat",
              "Project": "mlops-platform"
            }
          },
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.this",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cec2a7e31d8dc19a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0dbba137270a46259",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cec2a7e31d8dc19a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_eip.nat",
            "module.eks.aws_internet_gateway.this",
            "module.eks.aws_nat_gateway.this",
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00d30e079067b131b",
            "id": "r-rtb-0540c21e42c281e101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0540c21e42c281e10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_internet_gateway.this",
            "module.eks.aws_route_table.public",
            "module.eks.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:route-table/rtb-0cec2a7e31d8dc19a",
            "id": "rtb-0cec2a7e31d8dc19a",
            "owner_id": "517346398148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dbba137270a46259",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-private-rt",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-private-rt",
              "Project": "mlops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:route-table/rtb-0540c21e42c281e10",
            "id": "rtb-0540c21e42c281e10",
            "owner_id": "517346398148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d30e079067b131b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-public-rt",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-public-rt",
              "Project": "mlops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d61424149c26ad1f",
            "route_table_id": "rtb-0cec2a7e31d8dc19a",
            "subnet_id": "subnet-031704f5843494343"
          },
          "dependencies": [
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c949dc9a3eff1f9",
            "route_table_id": "rtb-0cec2a7e31d8dc19a",
            "subnet_id": "subnet-0526b6acb996735f2"
          },
          "dependencies": [
            "module.eks.aws_route_table.private",
            "module.eks.aws_subnet.private",
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015329903e1720403",
            "route_table_id": "rtb-0540c21e42c281e10",
            "subnet_id": "subnet-03f10409a7053120e"
          },
          "dependencies": [
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0327da06966d1a361",
            "route_table_id": "rtb-0540c21e42c281e10",
            "subnet_id": "subnet-0d101bc1ac107079e"
          },
          "dependencies": [
            "module.eks.aws_route_table.public",
            "module.eks.aws_subnet.public",
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:security-group/sg-0635be10bd30ebf2a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0635be10bd30ebf2a",
            "ingress": [],
            "name": "mlops-platform-dev-cluster-sg",
            "name_prefix": "",
            "owner_id": "517346398148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-cluster-sg",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-cluster-sg",
              "Project": "mlops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:security-group/sg-09f8210269613d6ef",
            "description": "EKS nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f8210269613d6ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "mlops-platform-dev-nodes-sg",
            "name_prefix": "",
            "owner_id": "517346398148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-nodes-sg",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-nodes-sg",
              "Project": "mlops-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:subnet/subnet-031704f5843494343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.40.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031704f5843494343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517346398148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-private-0",
              "Project": "mlops-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-private-0",
              "Project": "mlops-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "dependencies": [
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:subnet/subnet-0526b6acb996735f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.40.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0526b6acb996735f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "517346398148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-private-1",
              "Project": "mlops-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-private-1",
              "Project": "mlops-platform",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "dependencies": [
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:subnet/subnet-03f10409a7053120e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.40.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f10409a7053120e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517346398148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-public-0",
              "Project": "mlops-platform",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-public-0",
              "Project": "mlops-platform",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "dependencies": [
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:subnet/subnet-0d101bc1ac107079e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.40.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d101bc1ac107079e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "517346398148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-public-1",
              "Project": "mlops-platform",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-public-1",
              "Project": "mlops-platform",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0dc08bfd3a27476e7"
          },
          "dependencies": [
            "module.eks.aws_vpc.this",
            "module.eks.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:517346398148:vpc/vpc-0dc08bfd3a27476e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-02713439acbf0b812",
            "default_route_table_id": "rtb-083a8e9c442dda5da",
            "default_security_group_id": "sg-09394e60f11a17b55",
            "dhcp_options_id": "dopt-b85ed3de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc08bfd3a27476e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-083a8e9c442dda5da",
            "owner_id": "517346398148",
            "tags": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-vpc",
              "Project": "mlops-platform"
            },
            "tags_all": {
              "Env": "dev",
              "Managed": "terraform",
              "Name": "mlops-platform-dev-vpc",
              "Project": "mlops-platform"
            }
          }
        }
      ]
    }
  ]
}